--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="mobile">Mobile version of the page is under construction...</div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
